Done with projects page and added a contact div for both about me and project page

--- a/aboutme.html
+++ b/aboutme.html
@@ -93,6 +93,20 @@
                     <p class="card-text justifyText">I am a second-year student of the School of Info-comm Technology in Ngee Ann Polytechnic studying the course Information Technology (IT). I am specialising in Mobile Business Applications and Solutions Architect field and have taken the respective specialised elective modules namely Mobile applications Development and Secure Software Development. My interest in technology began when I first started learning how to use a computer when I was four years old. Back then, my parents taught me to use Microsoft Word 2003 to create a poster and I thought “Wow! That’s so cool!”. It amazes me how something can be easily done today, seem like something revolutionary in the past. Then came the indulgence of computer and console games. I had the Gameboy Advance (GBA), PSP and PS3 console during my primary school days. During those times I played countless of console and PC games that it would be exhaustive to list them down here. Till this day, gaming is part of my life and it wouldn’t run away anytime. In secondary school, I began my passion for the latest smartphones and technology and always sharing any special information that I could find online with my friends. It was also then I wanted to build my own desktop PC which I eventually did it after my O’ Levels. Going back to current times, I have grown to have a strong interest to be a software developer and had a fair share of obstacles along the way. “Defying the odds” is a phrase that motivates me to overcome the obstacles and to do better as a person as well as to unleash the creativity in me. I always believe that I have to “lick the stamp and send it” for every given opportunity. With that, being said, I have taken up software development projects that were given by my lecturers such as NP QuickBite an learning management system application that is currently available on both iOS and Android and also worked on some with my friends such as Mr Map and Team Memo.</p>
                 </div>
             </div>
+            <div class="row contact">
+                <div class="col-sm-12">
+                    <p>
+                        kevintoh0305@gmail.com
+                        <br/>
+                        <a class="btn" href="https://www.linkedin.com/in/kevin-toh-047688141/"><img src="Images/Contact/LinkedIn.png"/></a>
+                        <a class="btn" href="https://www.facebook.com/oneandonlyktzy"><img src="Images/Contact/Facebook.png"/></a>
+                        <a class="btn" href="https://www.instagram.com/ktzy_0305/"><img src="Images/Contact/Instagram.png"/></a>
+                    </p>
+                </div>
+                <div class="col-sm-12 black">
+                    ©2018 Created by Kevin Toh Zheng Ying
+                </div>
+            </div>
         </div>
     </section>
 </html>
