--- a/projects.html
+++ b/projects.html
@@ -30,10 +30,11 @@
             </div>  
         </nav>
     </header>
-    <body>
+    <section id="content">
         <div class="container-fluid">
             <div class="row projects projectTitle">
                 <div class="col-sm-12">
+                    <br/>
                     <h3>My Recent Work</h3>
                     <p>Here are some of the projects I have worked on lately.</p>  
                 </div>
@@ -70,7 +71,7 @@
                 </div>
                 <div class="col-sm-4 placeholder">
                     <figure>
-                        <img src="Images/Apps/TeamMemo.png" class="image img-fluid"/>
+                        <img src="Images/Apps/TeamMemo.png" class="image img-fluid bgwhite"/>
                         <br/>
                         <h4>Team Memo</h4>
                         <p class="justifyText">
@@ -83,6 +84,21 @@
                     </figure>
                 </div>    
             </div>
+            <div class="row contact">
+                <div class="col-sm-12">
+                    <p>
+                       kevintoh0305@gmail.com
+                       <br/>
+                       <a class="btn" href="https://www.linkedin.com/in/kevin-toh-047688141/"><img src="Images/Contact/LinkedIn.png"/></a>
+                       <a class="btn" href="https://www.facebook.com/oneandonlyktzy"><img src="Images/Contact/Facebook.png"/></a>
+                       <a class="btn" href="https://www.instagram.com/ktzy_0305/"><img src="Images/Contact/Instagram.png"/></a>
+                    </p>
+                </div>
+                <div class="col-sm-12 black">
+                    ©2018 Created by Kevin Toh Zheng Ying
+                </div>
+            </div>
         </div>
-    </body>
+    </section>
+</body>
 </html>
