Completed contacts page and whole online portfolio

--- a/aboutme.html
+++ b/aboutme.html
@@ -98,6 +98,7 @@
                     <p>
                         kevintoh0305@gmail.com
                         <br/>
+                        <a class="btn" href="https://github.com/ktzy0305"><img src="Images/Contact/Github.png"/></a>
                         <a class="btn" href="https://www.linkedin.com/in/kevin-toh-047688141/"><img src="Images/Contact/LinkedIn.png"/></a>
                         <a class="btn" href="https://www.facebook.com/oneandonlyktzy"><img src="Images/Contact/Facebook.png"/></a>
                         <a class="btn" href="https://www.instagram.com/ktzy_0305/"><img src="Images/Contact/Instagram.png"/></a>
