--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,10 @@
     <script src="Scripts/jquery-3.3.1.min.js"></script>
     <script src="Scripts/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <link href="css/master.css" rel="stylesheet">
+    <link href="css/contact.css" rel="stylesheet">
 </head>
 <body>
+    <header>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <a class="navbar-brand" href="aboutme.html"><strong>Kevin Toh Zheng Ying</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
@@ -28,11 +29,47 @@
                 </ul>
             </div>  
         </nav>
-    <header>
-        <h1>LinkedIn</h1>
-        <h1>Instagram</h1>
-        <h1>Email</h1>
     </header>
-    <body>
-    </body>
+    <section id="content">
+            <div class="container-fluid">
+                <div class="row contactform contentStandard">
+                    <div class="col-sm-12">
+                        <br/>
+                        <h3>Contact Me</h3>
+                        <form>
+                            <div class="form-group">
+                                <label for="name">Name</label>
+                                <input type="text" class="form-control" id="name">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email address</label>
+                                <input type="email" class="form-control" id="email">
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea class="form-control" rows="9" id="message"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <br/>
+                            <br/>
+                        </form>  
+                    </div>
+                </div>
+                <div class="row contact">
+                    <div class="col-sm-12">
+                        <p>
+                           kevintoh0305@gmail.com
+                           <br/>
+                           <a class="btn" href="https://github.com/ktzy0305"><img src="Images/Contact/Github.png"/></a>
+                           <a class="btn" href="https://www.linkedin.com/in/kevin-toh-047688141/"><img src="Images/Contact/LinkedIn.png"/></a>
+                           <a class="btn" href="https://www.facebook.com/oneandonlyktzy"><img src="Images/Contact/Facebook.png"/></a>
+                           <a class="btn" href="https://www.instagram.com/ktzy_0305/"><img src="Images/Contact/Instagram.png"/></a>
+                        </p>
+                    </div>
+                    <div class="col-sm-12 black">
+                        ©2018 Created by Kevin Toh Zheng Ying
+                    </div>
+                </div>
+            </div>
+        </section>
 </html>
