--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
                         </p>
                         <p class="buttons">
                             <a href="#" class="btn btn-info">More Info</a>
-                            <a href="https://github.com/ktzy0305/Mr-Map-2.0" class="btn btn-warning">Work In Progress</a>
+                            <a href="#" class="btn btn-warning">Work In Progress</a>
                         </p>
                     </figure>
                 </div>
