fixed profile image issue

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div id="main-body">
         <div class="container wow fadeInUp" id="about">
             <div class="profile-container">
-                <img src="images/profile/kevin.jpg" id="profile_picture" class="image-circle">
+                <img src="images/profile/kevin-toh.jpg" id="profile_picture" class="image-circle">
             </div>
             <div class="card">
                 <div>
