--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <header id="contact-header" class="wow fadeInUp">Contact</header>
                 <p id="contact-sub-text" class="wow fadeInUp" data-wow-delay="0.2s">Feel free to send me a message!</p>
                 <div class="col-md-12 col-sm-12 wow fadeInUp" id="contact-form" data-wow-delay="0.4s">
-                    <form action="https://formspree.io/email@domain.tld" method="POST">
+                    <form action="https://formspree.io/kevintoh0305@gmail.com" method="POST">
                         <div class="row" id="form-sender-row">
                             <div class="col-md-6 col-sm-6 wow fadeInUp">
                                 <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
