added shopify logo

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div id="projects-showcase" class="owl-carousel owl-theme">
                 <div class="item project-item wow fadeInUp">
                     <div class="project-logo-holder" data-wow-delay="0.2s">
-                        <img src="images/img1.jpg" class="image-responsive image-circle">
+                        <img src="images/projects/shopify.png" class="image-responsive image-circle">
                     </div>
                     <h4 class="project-name"><a href="https://github.com/ktzy0305/shop_here" target="_blank">Shopify</a></h4>
                     <p class="project-description">Shop to your heart's content.</p>
