updated shopify project link

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="project-logo-holder" data-wow-delay="0.2s">
                         <img src="images/projects/shopify.png" class="image-responsive image-circle">
                     </div>
-                    <h4 class="project-name"><a href="https://github.com/ktzy0305/shop_here" target="_blank">Shopify</a></h4>
+                    <h4 class="project-name"><a href="https://github.com/ktzy0305/shopify" target="_blank">Shopify</a></h4>
                     <p class="project-description">Shop to your heart's content.</p>
                 </div>
                 <div class="item project-item wow fadeInUp" data-wow-delay="0.4s">
