--- a/index.html
+++ b/index.html
@@ -65,48 +65,60 @@
                 <div>
                     <header class="card-title">Kevin Toh</header>
                     <p class="card-text">
-                        Hi there! I am a final year diploma student in Ngee Ann Polytechnic studying Information
-                        Technology and based in Singapore. I've created various desktop, mobile and web applications. 
+                        Hi there! I recently graduated with a Diploma in Information Technology from Ngee Ann Polytechnic, Singapore.
+                        I've created various desktop, mobile and web applications. 
                         My goal is to become a certified software engineer and create wonderful solutions for our digital
                         world.
                     </p>
                 </div>
                 <div class="skills-container">
                     <div class="bar flex">
-                        <div class="fill" style="width: 60%">
+                        <div class="fill" style="width: 70%">
                             <div class="tag flex">CSS</div>
-                        </div>
-                        <span>60%</span>
-                    </div>
-                    <div class="bar flex">
-                        <div class="fill" style="width: 70%">
-                            <div class="tag flex">HTML</div>
-                        </div>
-                        <span>70%</span>
-                    </div>
-                    <div class="bar flex">
-                        <div class="fill" style="width: 65%">
-                            <div class="tag flex">JavaScript</div>
-                        </div>
-                        <span>65%</span>
-                    </div>
-                    <div class="bar flex">
-                        <div class="fill" style="width: 70%">
-                            <div class="tag flex">C#</div>
                         </div>
                         <span>70%</span>
                     </div>
                     <div class="bar flex">
                         <div class="fill" style="width: 75%">
+                            <div class="tag flex">HTML</div>
+                        </div>
+                        <span>75%</span>
+                    </div>
+                    <div class="bar flex">
+                        <div class="fill" style="width: 70%">
+                            <div class="tag flex">JavaScript</div>
+                        </div>
+                        <span>70%</span>
+                    </div>
+                    <div class="bar flex">
+                        <div class="fill" style="width: 72%">
+                            <div class="tag flex">C#</div>
+                        </div>
+                        <span>72%</span>
+                    </div>
+                    <div class="bar flex">
+                        <div class="fill" style="width: 77%">
                             <div class="tag flex">Java</div>
                         </div>
                         <span>75%</span>
                     </div>
                     <div class="bar flex">
-                        <div class="fill" style="width: 80%">
+                        <div class="fill" style="width: 60%">
+                            <div class="tag flex">Kotlin</div>
+                        </div>
+                        <span>60%</span>
+                    </div>
+                    <div class="bar flex">
+                        <div class="fill" style="width: 65%">
+                            <div class="tag flex">PHP</div>
+                        </div>
+                        <span>65%</span>
+                    </div>
+                    <div class="bar flex">
+                        <div class="fill" style="width: 82%">
                             <div class="tag flex">Python</div>
                         </div>
-                        <span>80%</span>
+                        <span>82%</span>
                     </div>
                 </div>
             </div>
@@ -191,7 +203,7 @@
                         <li><a class="fab fa-linkedin-in wow fadeInUp" href="https://www.linkedin.com/in/kevin-toh-047688141/" target="_blank" data-wow-delay="1.2s"></a></li>
                     </ul>
                 </div>
-                <footer id="contact-footer" class="wow fadeInUp" data-wow-delay="1.4s">Copyright © 2019 Kevin Toh</footer>
+                <footer id="contact-footer" class="wow fadeInUp" data-wow-delay="0.4s">Copyright © 2020 Kevin Toh</footer>
             </div>
         </div>
     </div>
