Added keywords meta tag

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Kevin Toh">
-    <meta name="description" content="Kevin's Portfolio">
+    <meta name="description" content="Kevin's Toh Portfolio Website">
+    <meta name="keywords" content="programmer, singapore, mobile developer">
     <title>Kevin Toh</title>
     <!-- Style Sheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
