--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/nav-handler.js"></script>
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </head>
 
 <body>
@@ -77,49 +77,49 @@
                         <div class="fill" style="width: 70%">
                             <div class="tag flex">CSS</div>
                         </div>
-                        <span>70%</span>
+                        <span class="counter">70%</span>
                     </div>
                     <div class="bar flex">
                         <div class="fill" style="width: 75%">
                             <div class="tag flex">HTML</div>
                         </div>
-                        <span>75%</span>
+                        <span class="counter">75%</span>
                     </div>
                     <div class="bar flex">
                         <div class="fill" style="width: 70%">
                             <div class="tag flex">JavaScript</div>
                         </div>
-                        <span>70%</span>
+                        <span class="counter">70%</span>
                     </div>
                     <div class="bar flex">
                         <div class="fill" style="width: 72%">
                             <div class="tag flex">C#</div>
                         </div>
-                        <span>72%</span>
+                        <span class="counter">72%</span>
                     </div>
                     <div class="bar flex">
                         <div class="fill" style="width: 77%">
                             <div class="tag flex">Java</div>
                         </div>
-                        <span>75%</span>
+                        <span class="counter">75%</span>
                     </div>
                     <div class="bar flex">
                         <div class="fill" style="width: 60%">
                             <div class="tag flex">Kotlin</div>
                         </div>
-                        <span>60%</span>
+                        <span class="counter">60%</span>
                     </div>
                     <div class="bar flex">
                         <div class="fill" style="width: 65%">
                             <div class="tag flex">PHP</div>
                         </div>
-                        <span>65%</span>
+                        <span class="counter">65%</span>
                     </div>
                     <div class="bar flex">
                         <div class="fill" style="width: 82%">
                             <div class="tag flex">Python</div>
                         </div>
-                        <span>82%</span>
+                        <span class="counter">82%</span>
                     </div>
                 </div>
             </div>
