--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Kevin Toh">
     <meta name="description" content="Kevin's Toh Portfolio Website">
-    <meta name="keywords" content="programmer, singapore, mobile developer">
+    <meta name="keywords" content="programmer, singapore, mobile developer, Kevin Toh">
     <title>Kevin Toh</title>
     <!-- Style Sheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -60,7 +60,7 @@
     <div id="main-body">
         <div class="container wow fadeInUp" id="about">
             <div class="profile-container">
-                <img src="images/profile/kevin-toh.jpg" id="profile_picture" class="image-circle">
+                <img src="images/profile/kevin.JPG" id="profile_picture" class="image-circle">
             </div>
             <div class="card">
                 <div>
@@ -74,22 +74,22 @@
                 </div>
                 <div class="skills-container">
                     <div class="bar flex">
-                        <div class="fill" style="width: 70%">
+                        <div class="fill" style="width: 72%">
                             <div class="tag flex">CSS</div>
                         </div>
-                        <span class="counter">70%</span>
+                        <span class="counter">72%</span>
                     </div>
                     <div class="bar flex">
-                        <div class="fill" style="width: 75%">
+                        <div class="fill" style="width: 77.5%">
                             <div class="tag flex">HTML</div>
                         </div>
-                        <span class="counter">75%</span>
+                        <span class="counter">77.5%</span>
                     </div>
                     <div class="bar flex">
-                        <div class="fill" style="width: 70%">
+                        <div class="fill" style="width: 73%">
                             <div class="tag flex">JavaScript</div>
                         </div>
-                        <span class="counter">70%</span>
+                        <span class="counter">73%</span>
                     </div>
                     <div class="bar flex">
                         <div class="fill" style="width: 72%">
@@ -130,10 +130,10 @@
             <div id="projects-showcase" class="owl-carousel owl-theme">
                 <div class="item project-item wow fadeInUp">
                     <div class="project-logo-holder" data-wow-delay="0.2s">
-                        <img src="images/projects/shopify.png" class="image-responsive image-circle">
+                        <img src="images/projects/voguearo.png" class="image-responsive image-circle">
                     </div>
-                    <h4 class="project-name"><a href="https://github.com/ktzy0305/shopify" target="_blank">Shopify</a></h4>
-                    <p class="project-description">Shop to your heart's content.</p>
+                    <h4 class="project-name"><a href="https://github.com/ktzy0305/voguearo" target="_blank">Voguearo</a></h4>
+                    <p class="project-description">E-commerce application developed using flutter.</p>
                 </div>
                 <div class="item project-item wow fadeInUp" data-wow-delay="0.4s">
                     <div class="project-logo-holder">
@@ -161,7 +161,7 @@
                         <img src="images/projects/memotime.png" class="image-responsive image-circle">
                     </div>
                     <h4 class="project-name"><a href="https://play.google.com/store/apps/details?id=sg.edu.np.s10179142connect.memotime" target="_blank">Team Memo</a></h4>
-                    <p class="project-description">Track your memos and allocate time frames.</p>
+                    <p class="project-description">Time based task management.</p>
                 </div>
                 <div class="item project-item wow fadeInUp" data-wow-delay="0.6s">
                     <div class="project-logo-holder">
